added elements to track amount of tie games

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <div id='scoreboard'>
         <p id='player-score'>Player Score: </p>
         <p id='computer-score'>Computer Score: </p>
+        <p id='tie-score'>Ties: </p>
       </div>
       <div class='btn-select'>
         <button id='rock-btn' value='rock'>Rock</button>
