added function to end the game at 5 wins, and then provide a button to reset the scores

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id='paper-btn' value='paper'>Paper</button>
         <button id='scissors-btn' value='scissors'>Scissors</button>
       </div>
+      <div class='reset-button'></div>
       <div class='results'>
         <p id='game-results'></p>
       </div>
