added light styling

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
   </head>
   <body>
     <div class='container'>
-      <div id='scoreboard'>
-        <p id='player-score'>Player Score: </p>
-        <p id='computer-score'>Computer Score: </p>
-        <p id='tie-score'>Ties: </p>
-      </div>
+      <div class='main-header'>
+        <h3 id='welcome-msg'>Play Rock Paper Scissors Against the Computer!</h3>
+        <h4 id='make-chc-msg'>Choose your sign!</h4>
       <div class='btn-select'>
         <button id='rock-btn' value='rock'>Rock</button>
         <button id='paper-btn' value='paper'>Paper</button>
         <button id='scissors-btn' value='scissors'>Scissors</button>
       </div>
       <div class='reset-button'></div>
+      <div id='scoreboard'>
+        <p id='player-score'>Player Score: </p>
+        <p id='computer-score'>Computer Score: </p>
+        <p id='tie-score'>Ties: </p>
+      </div>
       <div class='results'>
         <p id='game-results'></p>
       </div>
